--- a/Pages/Clients/Index.cshtml
+++ b/Pages/Clients/Index.cshtml
@@ -13,6 +13,9 @@
 <table class="table">
     <thead>
         <tr>
+			<th>
+				Check
+			</th>
             <th>
                 @Html.DisplayNameFor(model => model.Client[0].Email)
             </th>
@@ -25,6 +28,9 @@
     <tbody>
 @foreach (var item in Model.Client) {
         <tr>
+			<th>
+				@Html.CheckBox("Help", false)
+			</th>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
@@ -40,3 +46,13 @@
 }
     </tbody>
 </table>
+<div class="row">
+	<div class="col-10">
+		<form method="post">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<input type="submit" value="Send messages" class="btn btn-primary" />
+			</div>
+		</form>
+	</div>
+</div>
