--- a/Pages/Clients/Edit.cshtml
+++ b/Pages/Clients/Edit.cshtml
@@ -11,23 +11,28 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Client.ID" />
-            <div class="form-group">
-                <label asp-for="Client.Email" class="control-label"></label>
-                <input asp-for="Client.Email" class="form-control" />
-                <span asp-validation-for="Client.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.Theme" class="control-label"></label>
-                <input asp-for="Client.Theme" class="form-control" />
-                <span asp-validation-for="Client.Theme" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+		<form method="post">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<input type="hidden" asp-for="Client.ID" />
+			<div class="form-group">
+				<label asp-for="Client.Email" class="control-label"></label>
+				<input asp-for="Client.Email" class="form-control" />
+				<span asp-validation-for="Client.Email" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Client.Theme" class="control-label"></label>
+				<input asp-for="Client.Theme" class="form-control" />
+				<span asp-validation-for="Client.Theme" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Client.ID_template" class="control-label"></label>
+				<input asp-for="Client.ID_template" class="form-control" />
+				<span asp-validation-for="Client.ID_template" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Save" class="btn btn-primary" />
+			</div>
+		</form>
     </div>
 </div>
 
