--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-page="/Email/Index">Send Email</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-page="/Templates/Index">Templates email</a>
+						</li>
 					</ul>
                 </div>
             </div>
