--- a/Pages/Email/Create.cshtml
+++ b/Pages/Email/Create.cshtml
@@ -5,9 +5,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>EmailModel</h4>
+<h1>Send email</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
