--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,10 +1,36 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+	ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h1>Authorization</h1>
+
+<div class="row">
+	<div class="col-md-4">
+		<form method="post">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="User1.Email" class="control-label"></label>
+				<input asp-for="User1.Email" class="form-control" />
+				<span asp-validation-for="User1.Email" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="User1.Passowrd" class="control-label"></label>
+				<input asp-for="User1.Passowrd" type="password" class="form-control" />
+				<span asp-validation-for="User1.Passowrd" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Authorize" class="btn btn-primary" />
+			</div>
+		</form>
+	</div>
 </div>
+
+<div>
+	<a asp-page="./Users/Registration">Registration</a>
+</div>
+
+@section Scripts {
+	@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
